<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.foi.hontic.ivan.watch4cpr.Main.Fragments.Step7Fragment">



    <ScrollView
        android:id="@+id/probaScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"


        app:layout_box="right|left">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textTitleStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/step7TitleText"
                android:textColor="@color/icons"
                android:textAlignment="center"
                android:textSize="25dp">

            </TextView>

            <Button
                android:id="@+id/step4Button"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_below="@id/textTitleStep"
                android:background="@drawable/button_corners"
                android:onClick="openStep4"
                android:text="@string/step7Instruction1"
                android:textColor="@color/icons" />


            <Button
                android:id="@+id/step5Button"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_below="@id/step4Button"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_corners"
                android:onClick="openStep5"
                android:text="@string/step7Instruction2"
                android:textColor="@color/icons" />

            <TextView
                android:id="@+id/instNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_below="@id/step5Button"
                android:layout_marginTop="16dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="12dp"
                android:layout_marginBottom="20dp">

            </TextView>


        </RelativeLayout>

    </ScrollView>

    <android.support.wearable.view.DismissOverlayView
        android:id="@+id/dismiss_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</FrameLayout>
